--- a/package.json
+++ b/package.json
@@ -6,10 +6,14 @@
   "scripts": {
     "dev": "vite",
     "build": "tsc && vite build",
-    "preview": "vite preview"
+    "preview": "vite preview",
+    "test": "jest"
   },
   "devDependencies": {
+    "@types/jest": "^27.5.0",
+    "jest": "^28.1.0",
     "sass": "^1.51.0",
+    "ts-jest": "^28.0.2",
     "typescript": "^4.5.4",
     "vite": "^2.9.9"
   }
