--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "devDependencies": {
     "@types/jest": "^27.5.0",
     "jest": "^28.1.0",
+    "jest-environment-jsdom": "^28.1.0",
     "sass": "^1.51.0",
     "ts-jest": "^28.0.2",
     "typescript": "^4.5.4",
