--- a/package.json
+++ b/package.json
@@ -6,11 +6,15 @@
   "scripts": {
     "dev": "vite",
     "build": "tsc && vite build",
-    "preview": "vite preview",
-    "test": "jest"
+    "force-preview": "vite preview --port 3000",
+    "preview": "yarn build && yarn preview",
+    "test": "jest",
+    "predeploy": "yarn build",
+    "deploy": "gh-pages -d dist"
   },
   "devDependencies": {
     "@types/jest": "^27.5.0",
+    "gh-pages": "^4.0.0",
     "jest": "^28.1.0",
     "jest-environment-jsdom": "^28.1.0",
     "sass": "^1.51.0",
