--- a/package.json
+++ b/package.json
@@ -21,5 +21,6 @@
     "ts-jest": "^28.0.2",
     "typescript": "^4.5.4",
     "vite": "^2.9.9"
-  }
+  },
+  "homepage": "https://fecapark.github.io/material-todo-list/"
 }
