--- a/package.json
+++ b/package.json
@@ -22,5 +22,8 @@
     "typescript": "^4.5.4",
     "vite": "^2.9.9"
   },
-  "homepage": "https://fecapark.github.io/material-todo-list/"
+  "homepage": "https://fecapark.github.io/material-todo-list/",
+  "dependencies": {
+    "dotenv": "^16.0.1"
+  }
 }
