--- a/package.json
+++ b/package.json
@@ -4,11 +4,11 @@
   "private": true,
   "version": "0.0.0",
   "scripts": {
+    "test": "jest",
     "dev": "vite",
     "build": "tsc && vite build",
-    "force-preview": "vite preview --port 3000",
-    "preview": "yarn build && yarn preview",
-    "test": "jest",
+    "preview-build": "tsc && vite build --mode preview-build",
+    "preview": "yarn preview-build && vite preview --port 3000",
     "predeploy": "yarn build",
     "deploy": "gh-pages -d dist"
   },
