Add Vector, Bezier to library.

--- a/jest.config.json
+++ b/jest.config.json
@@ -3,7 +3,7 @@
   "transform": {
     "^.+\\.(ts|tsx)?$": "ts-jest"
   },
-  "testEnvironment": "node",
+  "testEnvironment": "jsdom",
   "moduleNameMapper": {
     "^@/(.*)$": "<rootDir>/$1"
   },
