--- a/package.json
+++ b/package.json
@@ -14,7 +14,6 @@
   },
   "devDependencies": {
     "@types/jest": "^27.5.0",
-    "gh-pages": "^4.0.0",
     "jest": "^28.1.0",
     "jest-environment-jsdom": "^28.1.0",
     "sass": "^1.51.0",
@@ -25,6 +24,7 @@
   "homepage": "https://fecapark.github.io/material-form/",
   "dependencies": {
     "bezier-easing": "^2.1.0",
-    "dotenv": "^16.0.1"
+    "dotenv": "^16.0.1",
+    "gh-pages": "^6.0.0"
   }
 }
